DevOps/charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: hse-app
spec:
  tls:
  - secretName: myapp-tls
    hosts:
      - myapp.com
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /verify
          backend:
            service:
              name: auth-service
              port:
                number: 3030
    - host: myapp.com
      http:
        paths:
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 3030
        - path: /signup
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 3030
        - path: /api/post-service/v1/
          pathType: Prefix
          backend:
            service:
              name: post-service
              port:
                number: 9000
        - path: /api/comms-service/v1/
          pathType: Prefix
          backend:
            service:
              name: comment-service
              port:
                number: 9090
        - path: /api/chat-service/v1/chat
          pathType: Prefix
          backend:
            service:
              name: chat-service
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
